# spaceGen

./: .gitignore  README.md  original_directory_tree.md  pyproject.toml  spaceGen-hex-refactor.md
.github/workflows/: deploy-viz.yml
docs/: NOTES.md  PROJECT_LOG.md  STUDY_GUIDE.md  data_schema.md  directory_structure.md  minutiae.md  spaceGen_notes.md
notebooks/: 01_explore_osd352.ipynb  02_bronze_ingestion.ipynb  03_silver_qc.ipynb  04_gold_clustering.ipynb  05_gold_features.ipynb  06_model_training.ipynb  07_gsea.ipynb
src/spacegen/: __init__.py  config.py
src/spacegen/adapters/: __init__.py  h5_reader.py  h5ad_reader.py  local_io.py  local_writer.py  mlflow_logger.py
src/spacegen/core/: __init__.py  features.py  models.py  normalization.py  qc.py
src/spacegen/models/: __init__.py  configs.py
src/spacegen/ports/: __init__.py  data_port.py  interfaces.py
tests/: __init__.py  test_core_features.py  test_core_normalization.py  test_core_qc.py  test_models.py
viz/: index.html
viz/data/: gsea_network.json
