[project]
name = "spacegen"
version = "0.1.0"
description = "Gene expression ML pipeline for NASA spaceflight transcriptomics"
authors = [{name = "Harpreet Singh"}]
requires-python = ">=3.10"
dependencies = [
    "polars>=0.20.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "mlflow>=2.10.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
