[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacegen"
version = "0.1.0"
description = "Single-cell RNA-seq pipeline for spaceflight biology with hexagonal architecture and medallion data layers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Harpreet Singh", email = "your.email@example.com"}
]
keywords = ["scRNA-seq", "spaceflight", "bioinformatics", "machine-learning", "scanpy"]

dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.9.0",
    "numpy>=1.23.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "polars>=0.19.0",
    "pyarrow>=13.0.0",
    "h5py>=3.9.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "mlflow>=2.8.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
]

network = [
    "networkx>=3.1",
    "liana>=0.1.0",  # cell-cell communication
]

[project.urls]
Homepage = "https://github.com/h4rrye/spaceGen"
Repository = "https://github.com/h4rrye/spaceGen"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
